2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (libc-stmp): Only touch sysroot/lib/libc.a, don't
	overwrite it.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* Revert last change.

2008-11-03  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (libc-stmp): Don't create an empty
	sysroot/lib/libc.a.

2008-08-22  Neal H. Walfield  <neal@gnu.org>

	* libhurd-cap: Remove.
	* libhurd-cap-server: Likewise.
	* physmem: Likewise.
	* task: Likewise.
	* wortel: Likewise.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (--enable-runtime-checks): If zero, don't just
	define DEBUG_ELIDE, define it to 1.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Spell DEBUG_ELIDE correctly.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (--enable-runtime-checks): Fix spelling.

2008-06-21  Thomas Schwinge  <tschwinge@gnu.org>

	* README (Using the Cross-Compiler): New section.

2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* configure.ac (--enable-runtime-checks): New command line option.
	(USER_CPPFLAGS, KERNEL_CPPFLAGS): Add $CPP_CHECKS.
	(USER_CFLAGS, KERNEL_CFLAGS): Add $C_CHECKS.

2008-06-20  Thomas Schwinge  <tschwinge@gnu.org>

	* README (Documentation): New section.

2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am [HAVE_CROSS] (all-local): Depend on libstdc++.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* libc.a.in: Remove -lhurd-cap.
	* Makefile.am (libc-stmp): Remove dependency on
	viengoos/libhurd-cap.a.

2008-06-01  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefoo.am (PATH): Move definition...
	* configure.ac: ... here.

2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>

	* configure.ac (USER_CFLAGS, KERNEL_CFLAGS, CHECK_CFLAGS): Don't
	specify ``-fno-stack-protector''.

	* configure.ac (ABS_BUILDDIR): Use a more portable way to set.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* benchmarks: New directory.
	* configure.ac: Generate benchmarks/Makefile and
	benchmarks/boehm-gc/Makefile.