@@ -1,5 +1,9 @@
 2008-11-11  Neal H. Walfield  <neal@gnu.org>
 
+	* Makefile.am (SUBDIRS): Add sqlite.
+
+2008-11-11  Neal H. Walfield  <neal@gnu.org>
+
 	* zipf.h: New file.
 	* zipf.c: Likewise.
 
